Improve Search Engine Optimization

--- a/index.html
+++ b/index.html
@@ -5,6 +5,45 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="refresh" content="0; url='https://nziranziza.dev'" />
+  <meta name="description" content="Hello again! My name is Daniel Nziranziza, and I enjoy creating new
+  things with computer programs. Since I was a child, I have always
+  loved exploring electronic devices, especially mobile phones and
+  computers. After realizing my strong interest, I decided to pursue
+  Mathematics, Physics, and Computer Science in high school. In 2018,
+  Andela opened a pan-African hub in Kigali, and I was among the first
+  cohort. Andela gave me a chance to get my hands dirty with code and
+  opened me to the world of world-class software development." />
+  <meta name="keywords" content="Daniel, Nziranziza, React, ReactJS, Gatsby, GatsbyJS, TailwindCSS, Tailwind, CSS, Bootstrap, Contentful, Upwork, Operator, Polymaths, Polymathlabs
+  Portfolio, Web design, Web development, Software, Software development, Software Engineering, Angular, AngularJS, BK Techouse" />
+  <meta name="author" content="Daniel Nziranziza" />
+  <meta property="og:title" content="Hello again! My name is Daniel Nziranziza, and I enjoy creating new
+  things with computer programs. Since I was a child, I have always
+  loved exploring electronic devices, especially mobile phones and
+  computers. After realizing my strong interest, I decided to pursue
+  Mathematics, Physics, and Computer Science in high school. In 2018,
+  Andela opened a pan-African hub in Kigali, and I was among the first
+  cohort. Andela gave me a chance to get my hands dirty with code and
+  opened me to the world of world-class software development." />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://nziranziza.dev" />
+  <meta property="og:description" content="Hello again! My name is Daniel Nziranziza, and I enjoy creating new
+  things with computer programs. Since I was a child, I have always
+  loved exploring electronic devices, especially mobile phones and
+  computers. After realizing my strong interest, I decided to pursue
+  Mathematics, Physics, and Computer Science in high school. In 2018,
+  Andela opened a pan-African hub in Kigali, and I was among the first
+  cohort. Andela gave me a chance to get my hands dirty with code and
+  opened me to the world of world-class software development." />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Daniel Nziranziza - Portfolio" />
+  <meta name="twitter:description" content="Hello again! My name is Daniel Nziranziza, and I enjoy creating new
+  things with computer programs. Since I was a child, I have always
+  loved exploring electronic devices, especially mobile phones and
+  computers. After realizing my strong interest, I decided to pursue
+  Mathematics, Physics, and Computer Science in high school. In 2018,
+  Andela opened a pan-African hub in Kigali, and I was among the first
+  cohort. Andela gave me a chance to get my hands dirty with code and
+  opened me to the world of world-class software development." />
   <title>Daniel Nziranziza - Portfolio</title>
   <style>
     body {
